# baseweb

./: .gitignore  .pypi-template  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  Makefile.mak  README.md  REQUIREMENTS.md  TODO.md  pyproject.toml  requirements.base.txt  requirements.demo.txt  requirements.local.txt  requirements.run.txt  requirements.test.txt  requirements.txt  setup.py
.claude_plugin/: plugin.json
.github/: README.md
.github/workflows/: test.yaml
analysis/: api-flask-restful-migration.md  api-push-notifications.md  api-quart-migration.md  business-analysis-skipped.md  functional.md  hello-world-example.md  security-auth-migration.md  security-push-notifications.md  ux-pwa-foundation.md  ux-ui.md  ux-vue3-migration.md  vuetify-4-evaluation.md  vuetify-build-requirements.md
baseweb/: __init__.py  config.py  interface.py  rest.py  security.py  socketio.py  util.py  web.py
baseweb/static/css/: main.css  process_diagram.css
baseweb/static/js/: app.js  common.js  router.js  socketio.js
baseweb/static/js/components/: CollectionView.js  Page.js  PageWithBanner.js  PageWithStatus.js  ProcessDiagram.js
baseweb/templates/: 404.html  main.html  manifest.json  store.js
demo/: .env  __init__.py
demo/pages/index/: __init__.py  index.js
demo/pages/page1/: __init__.py  page1.js
demo/pages/page2/: __init__.py  page2.js
docs/: adding-security.md  building-your-first-baseweb-app.md  conf.py  contributing.md  getting-started.md  index.md  migration-guide.md  push-notifications-guide.md  skills.md  whats-in-the-box.md
examples/hello-world/: .env  README.md  app.py  pyproject.toml
examples/hello-world/app/: __init__.py
examples/hello-world/app/pages/: __init__.py
examples/hello-world/app/pages/about/: __init__.py  about.js
examples/hello-world/app/pages/index/: __init__.py  index.js
examples/hello-world/research/: INDEX.md
examples/hello-world/research/2026-05-04-vuetify3-icons/: README.md  SOURCES.md
examples/hello-world/research/2026-05-04-vuetify3-icons/fetched/: fetch-1.md  fetch-2.md
examples/hello-world/static/js/: About.js  HelloWorld.js
reporting/task-0.0/: development-summary.md  functional-review.md
reporting/task-1.1/: development-summary.md
reporting/task-2.1/: summary.md
reporting/task-2.2/: coordination-plan.md  summary.md
reporting/task-3.1/: consensus.md  summary.md
reporting/task-3.10/: summary.md  ux-ui-review.md
reporting/task-3.11/: summary.md
reporting/task-3.12/: summary.md
reporting/task-3.5/: summary.md  vendor-file-migration-notes.md
reporting/task-3.6/: summary.md
reporting/task-3.7/: summary.md
reporting/task-3.8/: summary.md
reporting/task-3.9/: summary.md
reporting/task-6.1/: consensus.md  development-summary.md  functional-review.md  ux-ui-review.md
reporting/task-6.2/: consensus.md
research/: INDEX.md
research/2026-04-30-quart-websocket-options/: README.md  SOURCES.md
research/2026-04-30-quart-websocket-options/fetched/: fetch-1.md  fetch-2.md  fetch-3.md  fetch-4.md
research/2026-05-04-vuetify-4-evaluation/: README.md  SOURCES.md
research/2026-05-04-vuetify-4-evaluation/fetched/: fetch-1.md  fetch-2.md  fetch-3.md  fetch-4.md
research/2026-05-04-vuetify-build-requirements/: README.md  SOURCES.md
research/2026-05-04-vuetify-build-requirements/fetched/: fetch-1.md
scripts/: download-vue3-vendor.sh  generate_icons.py  verify-vendor-files.sh
skills/create/: skill.md
skills/develop/: skill.md
skills/migrate/: skill.md
skills/review/: skill.md
src/baseweb/: __init__.py  push.py  resource.py  vapid.py
src/baseweb/static/css/: main.css
src/baseweb/static/images/: __init__.py
src/baseweb/static/images/icons/: __init__.py
src/baseweb/static/js/: app.js  common.js  router.js  socketio.js  store.js  sw.js
src/baseweb/static/js/components/: CollectionView.js  LineChart.js  NavigationDrawer.js  NotificationSnackbar.js  Page.js  PageWithBanner.js  PageWithStatus.js  ProcessDiagram.js  VuetifyFormGenerator.js
src/baseweb/templates/: main.html  manifest.json  minimal.html  store.js  v4.html
tests/: __init__.py  conftest.py  test_baseweb_async.py  test_frontend.py  test_placeholder.py  test_push.py  test_pwa.py  test_resource.py  test_resource_instantiation.py
