[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseweb"
version = "0.6.0"
description = "A Pythonic base for building interactive web applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  {name = "Christophe VG", email = "contact@christophe.vg"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
keywords = ["Quart", "Vue", "REST", "WebSocket"]
dependencies = [
  "Quart",
  "python-socketio",
  "python-dotenv",
  "websocket-client",
  "python-engineio",
  "dotmap",
  "pyfiglet",
  "python-slugify",
  "tabulate",
  "urllib3>=2.7.0",  # Security fix
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-asyncio>=0.21.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "tox>=4.0.0",
  "tox-uv>=1.0.0",
  "types-tabulate>=0.9.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/christophevg/baseweb"
Documentation = "https://baseweb.readthedocs.io/"
Repository = "https://github.com/christophevg/baseweb"
Issues = "https://github.com/christophevg/baseweb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/baseweb"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=baseweb --cov-report=term-missing"

# Type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Linting configuration
[tool.ruff]
line-length = 100
target-version = "py310"
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["baseweb"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# Multi-version testing
[tool.tox]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "run tests with pytest"
skip_install = false
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [["pytest", "tests", "-v", "--cov=baseweb", "--cov-report=term-missing"]]

[tool.basedpyright]
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
